# ArrNorm-Qgis-processing

./: ArrNorm_algorithm.py  ArrNorm_plugin.py  ArrNorm_provider.py  Makefile  README.md  __init__.py  metadata.txt  pyproject.toml  requirements.txt  resources.py  resources.qrc
.github/workflows/: tests.yml
core/: __init__.py  arrnorm.py  iMad.py  radcal.py  raster_ops.py  register.py
core/auxil/: __init__.py  auxil.py  congrid.py  header.py  lookup.py  png.py  supervisedclass.py
gui/: __init__.py  wrappers.py
tests/: test_integration.py  test_raster_ops.py
tests/data/: ref.tif  ref_adjusted2target.tif  target.tif
tests/data/expected/: target_mask.tif  target_norm_conv095.tif  target_norm_conv0999.tif  target_norm_masked.tif  target_norm_prealigned.tif  target_norm_t090.tif
utils/: extra_deps.py
